force-app/main/default/objects/breg_Company_Info_Field_Mapping__mdt/breg_Company_Info_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Defines field mappings for BREG business details display based on object type and entity type restrictions</description>
    <label>Company Info Field Mapping</label>
    <pluralLabel>Company Info Field Mappings</pluralLabel>
</CustomObject>