force-app/main/default/objects/breg_Company_Info_Field_Mapping__mdt/fields/breg_Active__c.field-meta.xml
<CustomField>
    <fullName>breg_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>