force-app/main/default/objects/breg_Company_Info_Field_Mapping__mdt/fields/breg_Allowed_Entity_Types__c.field-meta.xml
<CustomField>
    <fullName>breg_Allowed_Entity_Types__c</fullName>
    <label>Allowed Entity Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>