force-app/main/default/objects/breg_Company_Info_Field_Mapping__mdt/fields/breg_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>breg_Display_Order__c</fullName>
    <label>Display_Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>