force-app/main/default/objects/breg_Company_Info_Field_Mapping__mdt/fields/breg_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>