force-app/main/default/objects/breg_Company_Info_Field_Mapping__mdt/fields/breg_Hide_If_Blank__c.field-meta.xml
<CustomField>
    <fullName>breg_Hide_If_Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide If Blank</label>
    <type>Checkbox</type>
</CustomField>