force-app/main/default/objects/breg_Company_Info_Field_Mapping__mdt/fields/breg_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>breg_TN_TM_SM__c</fullName>
            </value>
            <value>
                <fullName>breg_Transaction__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>